@@ -1,0 +1,13 @@
+// $Id$
+#ifndef ACE_CONFIG_MACOSX_SNOWLEOPARD_H
+#define ACE_CONFIG_MACOSX_SNOWLEOPARD_H
+
+#include "ace/config-macosx-leopard.h"
+
+// This define suppresses the following error message:
+// error: #error ucontext routines are deprecated, 
+// and require _XOPEN_SOURCE to be defined
+#define _XOPEN_SOURCE
+
+#endif ACE_CONFIG_MACOSX_SNOWLEOPARD_H
+
