@@ -1,0 +1,5 @@
+# $Id$
+
+include $(ACE_ROOT)/include/makeinclude/platform_macosx_leopard.GNU
+
+CFLAGS -= -Wno-long-double
