@@ -1,3 +1,10 @@
+Wed Oct 14 23:15:59 UTC 2009  Abdul Sowayan  <sowayan@gmail.com>
+
+        * ace/config-macosx-snowleopard.h:
+        * include/makeinclude/platform_macosx_snowleopard.GNU:
+
+          First cut of adding snowleopard support.
+
 Wed Oct 14 14:43:01 UTC 2009  Olli Savia  <ops@iki.fi>
 
         * ace/config-lynxos.h:
